# key_wifi

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/DAP/: CMakeLists.txt
components/DAP/Include/: DAP.h
components/all_var/: CMakeLists.txt  var.c
components/all_var/include/: var.h
components/key/: CMakeLists.txt  key.c
components/key/include/: key.h
components/myusb/: CMakeLists.txt  DAP_handle.c  myusb.c
components/myusb/include/: DAP_handle.h  myusb.h
components/mywifi/: CMakeLists.txt  mywifi.c
components/mywifi/include/: mywifi.h
components/ws2812/: CMakeLists.txt  ws2812.c
components/ws2812/include/: ws2812.h
main/: CMakeLists.txt  main.c
